# kalshi-weather

./: .env.example  .gitignore  README.md  kalshi_api_key.pem  pyproject.toml
.claude/: settings.local.json
scripts/: run_day7_live_micro.sh
src/kalshi_weather_bot/: __init__.py  cli.py  config.py  contracts_cli.py  day4_cli.py  day5_cli.py  day6_cli.py  day7_cli.py  exceptions.py  journal.py  kalshi_client.py  log_setup.py  models.py  redaction.py  weather_cli.py
src/kalshi_weather_bot/contracts/: __init__.py  models.py  parser.py
src/kalshi_weather_bot/execution/: __init__.py  cancel_only.py  dry_run.py  lifecycle.py  live_adapter.py  live_micro.py  live_models.py  micro_models.py  micro_policy.py  models.py  position_tracker.py  reconciliation.py
src/kalshi_weather_bot/risk/: __init__.py  manager.py  models.py
src/kalshi_weather_bot/signal/: __init__.py  edge.py  estimator.py  matcher.py  models.py  pricing.py  selector.py
src/kalshi_weather_bot/ui/: __init__.py  event_buffer.py  models.py  terminal_dashboard.py
src/kalshi_weather_bot/weather/: __init__.py  (+3 more)
tests/: test_contract_parser_day3.py  test_day1_assumptions.py  test_day4_dry_run_executor.py  test_day4_orchestrator_cli.py  test_day4_risk_manager.py  test_day5_cli.py  test_day5_edge.py  test_day5_estimator.py  test_day5_matcher.py  test_day5_selector.py  test_day6_cancel_only.py  test_day7_live_micro.py  test_kalshi_order_endpoint_fallback.py  test_kalshi_pagination.py  test_live_adapter_order_lookup.py  test_nws_provider_day2.py  test_ui_event_buffer.py  test_ui_terminal_dashboard.py
tests/fixtures/: day5_markets.json  day5_weather_snapshot.json
