[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "kalshi-weather-bot"
version = "0.1.0"
description = "Day 1 foundation for a Kalshi weather market research bot"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Kalshi Weather Team" }
]
dependencies = [
  "httpx>=0.27.0,<0.29.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.3.0,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "rich>=13.7.1,<14.0.0",
  "cryptography>=42.0.0,<44.0.0"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0,<2.0.0",
  "pytest>=8.2.0,<9.0.0",
  "ruff>=0.5.0,<1.0.0"
]

[project.scripts]
kalshi-weather-day1 = "kalshi_weather_bot.cli:main"
kalshi-weather-day2 = "kalshi_weather_bot.weather_cli:main"
kalshi-weather-day3 = "kalshi_weather_bot.contracts_cli:main"
kalshi-weather-day4 = "kalshi_weather_bot.day4_cli:main"
kalshi-weather-day5 = "kalshi_weather_bot.day5_cli:main"
kalshi-weather-day6 = "kalshi_weather_bot.day6_cli:main"
kalshi-weather-day7 = "kalshi_weather_bot.day7_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kalshi_weather_bot"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
pretty = true
mypy_path = "src"
